[workspace]
resolver = "2"
members = [
  "dna/dummy",
  "dna/dummy_integrity",
  "dna/label",
  "dna/label_integrity",
  "dna/real",
  "dna/real_integrity",
]

[workspace.package]
version = "1.154.0"
rust-version = "1.65.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", default-features = false }
hdi = { version = "0.1.9", default-features = false }
hdk = { version = "0.0.162", default-features = false }

[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = "z"
lto = true

[profile.release.build-override]
opt-level = "z"
