[workspace]
resolver = "2"
members = [
  "dna/integer",
  "dna/integer_integrity",
  "dna/label",
  "dna/label_integrity",
  "dna/real",
  "dna/real_integrity",
  "dna/profiles",
  "dna/profiles_integrity",
]

[workspace.package]
version = "2.0.0"
rust-version = "1.75.0"
edition = "2021"

[workspace.lints.rust]
non_upper_case_globals = "allow"
unused_doc_comments = "allow"
non_camel_case_types = "allow"
non_snake_case = "allow"
unused_attributes = "allow"

[workspace.dependencies]
serde = { version = "=1.0.203", default-features = false }
hdi = { version = "=0.5.0-dev.17", default-features = false }
hdk = { version = "=0.4.0-dev.19", default-features = false }

[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = "z"
lto = true

[profile.release.build-override]
opt-level = "z"
