[package]
name = "profiles_zome"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk.workspace = true

hc_zome_profiles_coordinator = {git = "https://github.com/holochain-open-dev/profiles", branch = "for-hdk-v0.3.0-beta-dev.33" }
#hc_zome_profiles_coordinator = {git = "https://github.com/holochain-open-dev/profiles", version = "=0.2.0" }
#hc_zome_profiles_coordinator = "=0.2.0"
#hc_zome_profiles_coordinator =  {path="../../../submodules/profiles_alt_zome/crates/alt_coordinator", package="profiles_alt_coordinator" }



