[package]
name = "profiles_integrity_zome"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
#hc_zome_profiles_integrity = {git = "https://github.com/holochain-open-dev/profiles", branch = "for-hdk-v0.4.0-dev.1" }
hc_zome_profiles_integrity = {path = "../../../submodules/profiles_alt_zome/crates/integrity"}

hdi.workspace = true
